[gd_scene load_steps=4 format=3 uid="uid://dmifyq7kxqkxs"]

[ext_resource type="Script" path="res://Scripts/UI/GameUI.gd" id="1_38s8g"]

[sub_resource type="LabelSettings" id="LabelSettings_mlrs2"]
font_size = 81
font_color = Color(1, 0.826667, 0.35, 1)
outline_size = 45
outline_color = Color(0.53, 0.2014, 0.2014, 1)

[sub_resource type="LabelSettings" id="LabelSettings_52bqy"]
font_size = 30
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_38s8g")

[node name="Control_LevelCleared" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control_LevelCleared"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.0
offset_top = -368.0
offset_right = 273.0
offset_bottom = -257.0
grow_horizontal = 2
grow_vertical = 2
text = "Level Cleared!"
label_settings = SubResource("LabelSettings_mlrs2")

[node name="Label2" type="Label" parent="Control_LevelCleared"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -88.0
offset_right = 114.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 0
text = "Press Jump to enter next stage"
label_settings = SubResource("LabelSettings_52bqy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control_Planning" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control_Planning"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 727.0
offset_top = 933.0
offset_right = 1153.0
offset_bottom = 975.0
grow_horizontal = 2
grow_vertical = 0
text = "Press Jump to Start the Game"
label_settings = SubResource("LabelSettings_52bqy")
horizontal_alignment = 1
vertical_alignment = 1
